Fixed threading issues with the Transfer operation
The transfer operation was attempting to reuse the SCU connection to the target, which was causing conflicts with the presentation context. It was also using the MuleSoft scheduled executor for the SCU connection, which was sometimes causing those transactions to be scheduled outside of the transfer window. Now the transfer operation creates its own single-thread executor for the SCU connections, effectively serializing the C-STORE for each DICOM file received from the C-GET.

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>edu.jh.pm</groupId>
     <artifactId>dicom-connector</artifactId>
-    <version>4.1.0</version>
+    <version>4.1.2</version>
     <packaging>mule-extension</packaging>
     <name>Dicom Extension</name>
 
@@ -24,7 +24,9 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <!-- DICOM Library https://dcm4che.org/maven2/org/dcm4che/dcm4che-core/maven-metadata.xml -->
-        <dcm4che.version>5.29.0</dcm4che.version>
+        <!-- DICOM Library https://dcm4che.org/maven2/org/dcm4che/dcm4che-net/maven-metadata.xml -->
+        <!-- DICOM Library https://dcm4che.org/maven2/org/dcm4che/tool/dcm4che-tool-common/maven-metadata.xml -->
+        <dcm4che.version>5.29.1</dcm4che.version>
     </properties>
 
     <dependencies>
